2016-10-11 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/formbroker/formbroker.tcl: first stable
    version of the FormBroker package. The package checks and
    validates form data stored in response array as produced
    by ::rivet::response
    * contrib/validate_mac.tcl: example of validator checking
    and mangling a network mac address. This function is meant
    to work with the FormBroker

2016-10-09 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/mod_rivet_generator.c: improved comments in view of
    branching for new version of content generation script
    * rivet/packages/formbroker/formbroker.tcl: inital reworking for
    a transaction type form broker and validator

2016-09-24 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/formbroker/formbroker.tcl: add proposed form broker
    * rivet/packages/dio/dio.tcl: now returning also results in a dictionary
    * rivet/packages/dio/dio_Mysql.tcl: supporting also NULL as keyword for 
    NULL values of a column
    * doc/xml/commands.xml: further elaboration of ::rivet::exit command
    by adding alink to MaxRequestsPerChild parameter in Apache docs 

2016-09-19 Massimo Manghi <mxmanghi@apache.org>
    * rivet/rivet.tcl.in,rivet.tcl: fixed errors in comments

2016-09-08 Massimo Manghi <mxmanghi@apache.org>
    * tests/runtests.tcl: support for Apache 1.3 dropped. Add modules needed by
    Apache 2.4
    * tests/apachetests/apachetests.tcl: Dropped support for Apache 1.3
    * tests/shorthand.test: shorthand notation test versioning added
    * tests/virtualhost.test: removed NameVirtualHost directive no longer supported
    * tests/bailout.test: add tests for ::rivet::catch and ::rivet::try
    * tests/catch.rvt,try.rvt: script testing handling various conditions
    * rivet/rivet-tcl/url_query.tcl: add new command ::rivet::url_query
    
2016-09-07 Massimo Manghi <mxmanghi@apache.org>
    * rivet/rivet-tcl/catch.tcl: fixed argument management in ::catch call
