@@ -29,4 +29,4 @@ package ifneeded rivetparser 0.2 [list load [file join $dir librivetparser.so]]
 package ifneeded simpledb 0.1 [list source [file join $dir packages/simpledb/simpledb.tcl]]
 package ifneeded tclrivet 0.1 [list source [file join $dir packages/tclrivet/tclrivet.tcl]]
 package ifneeded tclrivetparser 0.1 [list source [file join $dir packages/tclrivet/tclrivetparser.tcl]]
-package ifneeded formbroker 1.0 [list source [file join $dir packages/formbroker/formbroker.tcl]]
+package ifneeded formbroker 0.1 [list source [file join $dir packages/formbroker/formbroker.tcl]]
